--- a/app/src/main/res/layout/list_item_sticker.xml
+++ b/app/src/main/res/layout/list_item_sticker.xml
@@ -14,6 +14,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintDimensionRatio="1"
         android:layout_margin="16dp"
-        android:scaleType="centerInside"/>
+        android:scaleType="fitCenter"/>
 
 </android.support.constraint.ConstraintLayout>
