--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,16 +3,17 @@
     <color name="colorPrimary">#2845ff</color>
     <color name="colorPrimaryDark">#11237b</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="iconBackground">#5c5c5c</color>
 
     <!-- UI palette (on light background) -->
     <color name="textColorPrimary">#DE000000</color> <!-- Primary text: 87% opacity -->
     <color name="textColorSecondary">#8A000000</color> <!-- Secondary text: 54% opacity -->
     <color name="textColorDisabled">#61000000</color> <!-- Disabled and hint text: 38% opacity -->
-    <color name="black_divider">#1E000000</color> <!-- Divider: 12% opacity -->
+    <color name="blackDivider">#1E000000</color> <!-- Divider: 12% opacity -->
 
     <!-- UI palette (on dark background) -->
     <color name="textWhitePrimary">#FFFFFFFF</color> <!-- Primary text: 100% opacity -->
     <color name="textWhiteSecondary">#B3FFFFFF</color> <!-- Secondary text: 70% opacity -->
     <color name="textWhiteDisabled">#80FFFFFF</color> <!-- Disabled and hint text: 50% opacity -->
-    <color name="white_divider">#1EFFFFFF</color> <!-- Divider: 12% opacity -->
+    <color name="whiteDivider">#1EFFFFFF</color> <!-- Divider: 12% opacity -->
 </resources>
